--- a/src/index.html
+++ b/src/index.html
@@ -96,6 +96,7 @@
   @@include('templates/settings/export/png.html', {})
   @@include('templates/settings/export/gif.html', {})
   @@include('templates/settings/export/zip.html', {})
+  @@include('templates/settings/export/atari.html', {})
   @@include('templates/settings/export/misc.html', {})
 
   <script type="text/javascript">
